--- a/grid.html
+++ b/grid.html
@@ -49,3 +49,44 @@
                                 <div class="col-4">
                                     Landorks
                                 </div>
+                                <div class="col-8">
+                                    <i class="bi bi-facebook"></i>
+                                    <i class="bi bi-instagram"></i>
+                                    <i class="bi bi-youtube"></i>
+                                    <i class="bi bi-browser-edge"></i>
+                                    <i class="bi bi-linkedin"></i>
+                                </div>
+                            </div>
+                            <div class="row bg-dark text-light"><!--second-->
+                                <div class="col">
+                                    Web Developer
+                                </div>
+
+                            </div>
+                            <div class="row text-light"> <!--third-->
+                                <div class="col-3 bg-primary p-5">
+                                    HTML
+                                </div>
+                                <div class="col-3 bg-success p-5">
+                                    CSS
+                                </div>
+                                <div class="col-3 bg-warning p-5">
+                                    PHP
+                                </div>
+                                <div class="col-3 bg-danger p-5">
+                                    MYSQL
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+</body>
+</html>
