--- a/grid.html
+++ b/grid.html
@@ -9,17 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-primary"> WELCOME TO MY WEBSITE</h1>
+    <h1 class="text-primary">WELCOME TO MY WEBSITE!</h1>
     <br>
     <div class="modal" tabindex="-1">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
+              <h5 class="modal-title">MODAL TITLE</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <p>Modal body text goes here.</p>
+              <p>MODAL BODY TEXT GOES HERE.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -29,25 +29,25 @@
         </div>
       </div>
       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        See My Profile
+        CLICK HERE!
       </button>
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">About Myself</h5>
+              <h5 class="modal-title" id="exampleModalLabel">ABOUT MYSELF</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="container-fluid border border-dark b-5">
                     <div class="row">
                         <div class="col-4 d-flex justify-content-center align-items-center bg-dark">
-                            <img class="img-fluid" src="c:\Users\COMLAB\Downloads\download.jfif">
+                            <img class="img-fluid" src="images.jpg">
                         </div>
                         <div class="col-8">
                             <div class="row bg-secondary text-light p-5"> <!--first-->
                                 <div class="col-4">
-                                    Landorks
+                                    KURT SALONGA
                                 </div>
                                 <div class="col-8">
                                     <i class="bi bi-facebook"></i>
