--- a/grid.html
+++ b/grid.html
@@ -42,10 +42,10 @@
                 <div class="container-fluid border border-dark b-5">
                     <div class="row">
                         <div class="col-4 d-flex justify-content-center align-items-center bg-dark">
-                            <img class="img-fluid" src="images.jpg">
+                            <img class="img-fluid" src="Kagura.png">
                         </div>
                         <div class="col-8">
-                            <div class="row bg-secondary text-light p-5"> <!--first-->
+                            <div class="row bg-secondary text-light p-5"> 
                                 <div class="col-4">
                                     KURT SALONGA
                                 </div>
@@ -57,13 +57,13 @@
                                     <i class="bi bi-linkedin"></i>
                                 </div>
                             </div>
-                            <div class="row bg-dark text-light"><!--second-->
+                            <div class="row bg-dark text-light">
                                 <div class="col">
-                                    Web Developer
+                                    WEB DEVELOPER
                                 </div>
 
                             </div>
-                            <div class="row text-light"> <!--third-->
+                            <div class="row text-light"> 
                                 <div class="col-3 bg-primary p-5">
                                     HTML
                                 </div>
